--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Install:
 cd lib/
-git clone https://github.com/ded/bowser
+git clone git://github.com/bestiejs/platform.js.git
 git clone https://github.com/cubiq/add-to-homescreen
 git clone https://github.com/sonnyp/lightstring
 
