--- a/README
+++ b/README
@@ -3,4 +3,4 @@ cd lib/
 git clone git://github.com/bestiejs/platform.js.git
 git clone https://github.com/cubiq/add-to-homescreen
 git clone https://github.com/sonnyp/lightstring
-
+wget https://vkbeautify.googlecode.com/files/vkbeautify.0.95.01.beta.js
