--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Install:
 cd lib/
 git clone git://github.com/bestiejs/platform.js.git
-git clone https://github.com/cubiq/add-to-homescreen
-git clone https://github.com/sonnyp/lightstring
+git clone git://github.com/cubiq/add-to-homescreen
+git clone git://github.com/eldonilo/lightstring.git
 wget https://vkbeautify.googlecode.com/files/vkbeautify.0.95.01.beta.js
