Add an entry to README.

--- a/README
+++ b/README
@@ -2,3 +2,5 @@ Install:
 cd lib/
 git clone git://github.com/eldonilo/lightstring.git
 wget https://vkbeautify.googlecode.com/files/vkbeautify.0.95.01.beta.js
+
+Enjoy.
